// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelemetryMessagesList custom renderers onRenderCustomProperties when custom properties is present 1`] = `
<DocumentFragment>
  <span>
    {"key1":"value1","key2":"value2"}
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList custom renderers onRenderCustomProperties when there is not custom properties 1`] = `
<DocumentFragment>
  <span>
    -
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList custom renderers onRenderTimestamp (from the column onRender) matches snapshot 1`] = `
<DocumentFragment>
  <span>
    formatted-datetime
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList renders and matches snapshot 1`] = `
<DocumentFragment>
  <mock-styledwithviewportcomponent
    columns="[object Object],[object Object],[object Object],[object Object],[object Object]"
    items="[object Object]"
  />
</DocumentFragment>
`;
